syntax = "proto3";

package protos;

// 要获取的数据结构
message User{
    int32 id = 1;
    string name = 2;
}

// 请求数据结构
message UserReq{
    int32 id = 1;
}

// 定义服务，关键字'service'，方法关键字'rpc'
service IUserService {
    // 单一请求应答，一对一
    rpc Get (UserReq) returns (User);
    // 服务端流式应答，一对多，可用于下载
    rpc GetList (UserReq) returns (stream User);
    // 客户端流式请求，多对一，可用于上传
    rpc WaitGet(stream UserReq) returns (User);
    // 双向流式请求应答，支持HTTP/2.0
    rpc LoopGet(stream UserReq) returns (stream User);
}
